Move QMimeData registration back to where it belongs

Fixes regression introduced in 7a6b1a037e65f35d86924910e24ca79ea80b4ae4

BUG: 418109
FIXED-IN: 5.18.5

Differential Revision: https://phabricator.kde.org/D28485